test/algeff/wrong/eff-rec2.kk.out
test/algeff/wrong/eff-rec2.kk(1, 1): error: 
